[gd_scene load_steps=2 format=3 uid="uid://settings_menu"]

[ext_resource type="Script" path="res://ui/settings_menu.gd" id="1"]

[node name="SettingsMenu" type="Control"]
script = ExtResource("1")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = ""
horizontal_alignment = 1

[node name="ControlsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = ""

[node name="LanguageSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LanguageLabel" type="Label" parent="MarginContainer/VBoxContainer/LanguageSection"]
layout_mode = 2
text = "Langue / Language"

[node name="LanguageOption" type="OptionButton" parent="MarginContainer/VBoxContainer/LanguageSection"]
layout_mode = 2

[node name="AudioSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MasterLabel" type="Label" parent="MarginContainer/VBoxContainer/AudioSection"]
layout_mode = 2
text = ""

[node name="MasterSlider" type="HSlider" parent="MarginContainer/VBoxContainer/AudioSection"]
layout_mode = 2
min_value = 0.0
max_value = 100.0
value = 80.0

[node name="MusicLabel" type="Label" parent="MarginContainer/VBoxContainer/AudioSection"]
layout_mode = 2
text = ""

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer/AudioSection"]
layout_mode = 2
min_value = 0.0
max_value = 100.0
value = 80.0

[node name="SFXLabel" type="Label" parent="MarginContainer/VBoxContainer/AudioSection"]
layout_mode = 2
text = ""

[node name="SFXSlider" type="HSlider" parent="MarginContainer/VBoxContainer/AudioSection"]
layout_mode = 2
min_value = 0.0
max_value = 100.0
value = 100.0

[node name="DisplaySection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="FullscreenCheck" type="CheckButton" parent="MarginContainer/VBoxContainer/DisplaySection"]
layout_mode = 2
text = ""

[node name="VSyncCheck" type="CheckButton" parent="MarginContainer/VBoxContainer/DisplaySection"]
layout_mode = 2
text = ""

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResetSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ResetLabel" type="Label" parent="MarginContainer/VBoxContainer/ResetSection"]
layout_mode = 2
text = ""
horizontal_alignment = 1

[node name="ResetButton" type="Button" parent="MarginContainer/VBoxContainer/ResetSection"]
layout_mode = 2
text = ""

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = ""

[connection signal="value_changed" from="MarginContainer/VBoxContainer/AudioSection/MasterSlider" to="." method="_on_master_slider_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/AudioSection/MusicSlider" to="." method="_on_music_slider_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/AudioSection/SFXSlider" to="." method="_on_sfx_slider_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/LanguageSection/LanguageOption" to="." method="_on_language_selected"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/DisplaySection/FullscreenCheck" to="." method="_on_fullscreen_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/DisplaySection/VSyncCheck" to="." method="_on_vsync_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ResetSection/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_pressed"]
